# ai.py

./: .gitignore  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml  session.text  test_streaming.py
ai/: __init__.py  core.py  model.py  tools.py  types.py
ai/providers/: base.py  google.py  openai.py
examples/: fastapi_app.py
examples/perplexity/: README.md  app.py  perplexity.py  requirements.txt  search.py
examples/perplexity/static/: index.html
