[tool.poetry]
name = "ai"
version = "0.1.0"
description = "A Python AI SDK inspired by the Vercel AI SDK."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
httpx = "^0.27.0"
openai = "^1.25.2"
pydantic = "^2.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
mypy = "^1.10.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
